# rag_chatbot

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  DOCKER_BUILD_OPTIMIZATION.md  DOCKER_README.md  Dockerfile  LICENSE  Makefile  OLLAMA_SETUP_GUIDE.md  OPEN_SOURCE_CHECKLIST.md  QUICKSTART_GUIDE.md  README.md  SECURITY.md  SETUP_GUIDE.md  STRUCTURE.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  database.py  main.py  models.py
data/sample/: rag_introduction.txt
docs/: IMAGE_PROCESSING_QUICKSTART.md  PROJECT_STRUCTURE.md  architecture.md  embedding_guide.md  getting_started.md  image_processing_setup.md  rag_chatbot_postman_collection.json  switching_providers.md  windows_setup_guide.md
examples/: image_extraction_example.py  quickstart.py
scripts/: index_documents.py  query.py  quickstart.bat  quickstart.sh  setup_ocr_manual.md  setup_windows_ocr.ps1
src/: __init__.py
src/adapters/: __init__.py
src/adapters/embedding/: __init__.py  base.py  (+2 more)
src/config/: __init__.py  config.py
src/extractors/: __init__.py  base.py  docx.py  image.py  pdf.py  table.py  txt.py
src/retriever/: __init__.py  retriever.py
src/services/: __init__.py  personal_info_extractor.py
src/utils/: __init__.py  chunking.py  dependency_checker.py  prompts.py
src/vectorstore/: __init__.py  base.py  chroma.py  faiss.py  memory.py
tests/: __init__.py  test_e2e.py  test_embedding_adapters.py  test_extractors.py  test_image_extractor.py  test_llm_adapters.py  test_vectorstore.py
webapp/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json
webapp/src/: App.css  App.tsx  index.css
(+8 files in other folders)
